<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TaskViewFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EC46A5"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_title"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:contentDescription="@string/edit"
                android:onClick="editTask"
                android:src="@android:drawable/ic_menu_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3EC46A5"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_body"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>